--- a/.github/workflows/deploy_website.yml
+++ b/.github/workflows/deploy_website.yml
@@ -1,6 +1,9 @@
-name: Deploy Website
+name: deploy_website
+
 run-name: ${{ github.actor }} Deploy Website
+
 on: [push]
+
 jobs:
   publish_master:
     if: github.ref == 'refs/heads/master'
@@ -8,41 +11,60 @@ jobs:
     environment:
       name: prod
       url: https://expertanalytics.no/
+
     steps:
-      - name: Checkout
+      - name: Checkout website
         uses: actions/checkout@v3
+        with:
+          path: main
+
       - name: Hugo Setup
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: 'latest'
+
       - name: Hugo Build
-        run: hugo --minify --destination=public || exit 1
-      - name: deploy
-        env:
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          cd public
+          cd main
+          hugo --minify --destination=../public || exit 1
+          cd ../
+
+      - name: Checkout expertanalytics.github.io
+        uses: actions/checkout@v3
+        with:
+          path: remote
+          repository: expertanalytics/expertanalytics.github.io
+          ref: master
+          ssh-key: ${{ secrets.WEBSITE_DEPLOY }}
+
+      - name: deploy
+        run: |
+          cd remote
+          rm -rf $(ls -A . | grep -v .git)
+          cp -R ../public/* .
           echo expertanalytics.no > CNAME
-          git init
           git config user.name xal
           git config user.email post@expertanalytics.no
-          git config -l | grep 'http\..*\.extraheader' | cut -d= -f1 | xargs -L1 git config --unset-all
           git add .
           git commit -m 'Deploy website from actions'
-          git push https://xal:$TOKEN@github.com/expertanalytics/expertanalytics.github.io.git @:master --force
-          cd ~
+          git push origin master --force
+
   publish_branch:
     if: github.ref != 'refs/heads/master'
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Hugo Setup
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: 'latest'
+
       - name: Hugo Build
         run: hugo --minify --destination=public || exit 1
+
       - name: deploy
         env:
           SYNC_KEY: ${{ secrets.DEVXALKEY }}
