:sparkles: new phone in footer

--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@ googleAnalytics = "G-BL3R31765C"
 
 [params]
 copyright = "© Expert Analytics AS"
-director = "asmund"
+director = "ola"
 
 [privacy]
   [privacy.googleAnalytics]
